--- a/Lin.xcodeproj/xcshareddata/xcschemes/Lin.xcscheme
+++ b/Lin.xcodeproj/xcshareddata/xcschemes/Lin.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0500"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -52,6 +52,15 @@
       <PathRunnable
          FilePath = "/Applications/Xcode.app">
       </PathRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "AA1B7DA217C3C1EC00A3A6D7"
+            BuildableName = "Lin.xcplugin"
+            BlueprintName = "Lin"
+            ReferencedContainer = "container:Lin.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
          <AdditionalOption
             key = "NSZombieEnabled"
