--- a/Lin.xcodeproj/xcshareddata/xcschemes/LinTests.xcscheme
+++ b/Lin.xcodeproj/xcshareddata/xcschemes/LinTests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0500"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -49,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "AA470D6217C3D380005CBB7F"
+            BuildableName = "LinTests.xctest"
+            BlueprintName = "LinTests"
+            ReferencedContainer = "container:Lin.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
